Change image ext

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="col-sm-6">
             <div class="team-section">
               <a href="https://www.linkedin.com/in/yiyong-guo-2031ab67">
-                <img class="mx-auto rounded-circle" src="img/team/yiyong.jpg" alt="Yiyong Guo">
+                <img class="mx-auto rounded-circle" src="img/team/yiyong.JPG" alt="Yiyong Guo">
               </a>
               <h4>郭弋雍</h4>
               <p class="text-muted">Founder & CEO</p>
